project(RTSPServer)

# Cmake needs some version information
CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

set(CMAKE_CXX_STANDARD 14)

SET(ARCHSTR ${ANDROID_ABI})
message(STATUS "Architecture: ${ARCHSTR}")

set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Configs" FORCE)
#=======================================
# USER DEFINED VARIABLES

IF(NOT CMAKE_BUILD_TYPE)
	MESSAGE(STATUS "CMAKE_BUILD_TYPE was not specified. Building Debug Version.")
	SET(CMAKE_BUILD_TYPE Debug)
ENDIF(NOT CMAKE_BUILD_TYPE)

#==========================================================

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}/src/
    ${CMAKE_CURRENT_SOURCE_DIR}/src/3rdpart
)

FILE(GLOB NetSources ${CMAKE_CURRENT_SOURCE_DIR}/src/net/*.cpp)
FILE(GLOB NetHeaders ${CMAKE_CURRENT_SOURCE_DIR}/src/net/*.h)
ADD_LIBRARY(net SHARED ${NetSources} ${NetHeaders})
SET_TARGET_PROPERTIES(net PROPERTIES
  DEBUG_POSTFIX d
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib/${ARCHSTR}"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib/${ARCHSTR}"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin/${ARCHSTR}"
)

FILE(GLOB XopSources ${CMAKE_CURRENT_SOURCE_DIR}/src/xop/*.cpp)
FILE(GLOB XopHeaders ${CMAKE_CURRENT_SOURCE_DIR}/src/xop/*.h)
ADD_LIBRARY(xop SHARED ${XopSources} ${XopHeaders})
ADD_DEPENDENCIES(xop net)
TARGET_LINK_LIBRARIES(xop net)
SET_TARGET_PROPERTIES(xop PROPERTIES
  DEBUG_POSTFIX d
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib/${ARCHSTR}"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib/${ARCHSTR}"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin/${ARCHSTR}"
)

IF(ANDROID)
  TARGET_LINK_LIBRARIES(xop log)
	TARGET_LINK_LIBRARIES(net log)
ENDIF(ANDROID)

IF(UNIX AND NOT ANDROID)
  SET(LINKLIBS pthread)
ENDIF(UNIX AND NOT ANDROID)

IF(BUILD_EXECUTABLE)
  ADD_EXECUTABLE(rtsp_pusher ${CMAKE_CURRENT_SOURCE_DIR}/example/rtsp_pusher.cpp )
  ADD_DEPENDENCIES(rtsp_pusher net xop)
  TARGET_LINK_LIBRARIES(rtsp_pusher net xop ${LINKLIBS})
  SET_TARGET_PROPERTIES(rtsp_pusher PROPERTIES
  	DEBUG_POSTFIX d
  	ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib/${ARCHSTR}"
  	LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib/${ARCHSTR}"
  	RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin/${ARCHSTR}"
  )

  ADD_EXECUTABLE(rtsp_h264_file ${CMAKE_CURRENT_SOURCE_DIR}/example/rtsp_h264_file.cpp )
  ADD_DEPENDENCIES(rtsp_h264_file net xop)
  TARGET_LINK_LIBRARIES(rtsp_h264_file net xop ${LINKLIBS})
  SET_TARGET_PROPERTIES(rtsp_h264_file PROPERTIES
  	DEBUG_POSTFIX d
  	ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib/${ARCHSTR}"
  	LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib/${ARCHSTR}"
  	RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin/${ARCHSTR}"
  )

  ADD_EXECUTABLE(rtsp_server ${CMAKE_CURRENT_SOURCE_DIR}/example/rtsp_server.cpp )
  ADD_DEPENDENCIES(rtsp_server net xop)
  TARGET_LINK_LIBRARIES(rtsp_server net xop ${LINKLIBS})
  SET_TARGET_PROPERTIES(rtsp_server PROPERTIES
  	DEBUG_POSTFIX d
  	ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib/${ARCHSTR}"
  	LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib/${ARCHSTR}"
  	RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin/${ARCHSTR}"
  )
ENDIF(BUILD_EXECUTABLE)
